# PX4-Autopilot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PX4_README_MSYS2_WIN.md  PX4_RZV2H_RDK-RZV2H-Board.yaml  README.md  README_fpb-ra8e1_draft.md  RZV2H_CM33_BSP_IMPLEMENTATION.md  RZV2H_CM33_KCONFIG_REFERENCE.md  b  build.sh  build_setup.sh  c  c_ra8p1  f  f.jlink  flash  flash.jlink  flash_dualcore.jlink  flash_dualcore.sh  j  make  pin_mapping_gen.py  px4_cmake_build.sh  px4_docker  px4_ra8.md  px4_ra8_review.yaml  px4_readme_msys2.md  px4_set_env.sh  px4_verify_env.sh  ra8e1_pin_mapping.csv
.github/workflows/: build_all_targets.yml  checks.yml  clang-tidy.yml  compile_macos.yml  compile_ubuntu.yml  dev_container.yml  ekf_functional_change_indicator.yml  ekf_update_change_indicator.yml  failsafe_sim.yml  mavros_mission_tests.yml  mavros_offboard_tests.yml  ros_integration_tests.yml  sitl_tests.yml
Tools/: check_submodules.sh
Tools/module_config/: output_groups_from_timer_config.py
boards/renesas/docs/: RA8P1_FMU_IO_Replacement_Architecture.md  RZV2H_Autonomus_Drone_Software_Specification.md
boards/renesas/evk-ra8p1/: DRDY_VERIFICATION_CHECKLIST.md  GY921_QUICK_TEST.md  GY921_SPI_FIX_SUMMARY.md  ICM20948_DRDY_ANALYSIS.md  Kconfig  README.md  README_ESCs.md  README_IMU.md  default.px4board  default_bk.px4board  default_minimal.px4board  dshot.px4board  firmware.prototype  manifest.xml  test.px4board  test_sensors.sh  validate_board.sh
boards/renesas/evk-ra8p1-io-cm33/: default.px4board
boards/renesas/evk-ra8p1-io-cm33/extras/: .gitkeep
boards/renesas/evk-ra8p1-io-cm33/px4io_ipc/: CMakeLists.txt  Kconfig  adc.cpp  failsafe.cpp  heartbeat_monitor.cpp  ipc.cpp  ipc.h  ipc_hardware.cpp  ipc_hardware.h  ipc_protocol.h  mixer.cpp  protocol.h  pwm_out.cpp  pwm_out.h  px4io.cpp  px4io.h  rc_decoder.cpp  registers.c  transport_sharedmem.cpp
boards/renesas/evk-ra8p1-io-cm33/src/: CMakeLists.txt  board_config.h  init.c  timer_config.cpp
boards/renesas/evk-ra8p1/cmake/: init.cmake
boards/renesas/evk-ra8p1/init/: rc.board  rc.board_defaults  rc.board_extras  rc.board_mavlink  rc.board_sensors
boards/renesas/evk-ra8p1/init_bk/: rc.board  rc.board_defaults  rc.board_sensors
boards/renesas/evk-ra8p1/px4io_cm85/: CMakeLists.txt  Kconfig  ipc_hardware_cm85.cpp  ipc_hardware_cm85.h  ipc_protocol.h  px4io_cm85.cpp
boards/renesas/evk-ra8p1/src/: CMakeLists.txt  board_common.c  board_config.h  i2c.cpp  i2c_funcs.c  init.c  led.c  spi.cpp  system_stubs.c  timer_config.cpp
boards/renesas/fmu-ra8p1/: RA8P1_FMU_Block_Diagram.drawio  RA8P1_FMU_Hardware_Specification.md  RA8P1_FMU_Software_Specification.md
boards/renesas/fpb-ra8e1/: DELIVERY.md  Kconfig  README.md  default.px4board  dshot.px4board  firmware.prototype  manifest.xml  test.px4board  test_sensors.sh  validate_board.sh
boards/renesas/fpb-ra8e1/init/: rc.board  rc.board_defaults  (+1 more)
boards/renesas/rdk-rzv2h/: Kconfig  README.md  default.px4board  firmware.prototype
boards/renesas/rdk-rzv2h-io-cm33/: default.px4board  firmware.prototype
boards/renesas/rdk-rzv2h-io-cr8_1/: default.px4board  firmware.prototype
src/lib/cdev/: CDev.cpp
src/lib/rc/: dsm.cpp
src/lib/version/: px_update_git_header.py
src/modules/commander/: Commander.cpp
src/modules/ekf2/: CMakeLists.txt
src/modules/mavlink/: mavlink_ftp.cpp
src/modules/uxrce_dds_client/: CMakeLists.txt
src/systemcmds/param/: param.cpp
(+74 files in other folders)
